--- a/package.json
+++ b/package.json
@@ -1,42 +1,17 @@
 {
-  "name": "BagMyFood",
+  "name": "bagmyfood",
   "version": "0.0.0",
+  "private": true,
+  "scripts": {
+    "start": "node ./bin/www"
+  },
   "dependencies": {
-    "@types/history": "4.5.1",
-    "@types/react": "15.0.24",
-    "@types/react-dom": "15.5.0",
-    "@types/react-redux": "4.4.40",
-    "@types/react-router-dom": "4.0.4",
-    "@types/react-router-redux": "5.0.1",
-    "@types/webpack": "2.2.15",
-    "@types/webpack-env": "1.13.0",
-    "aspnet-prerendering": "^2.0.5",
-    "aspnet-webpack": "^1.0.29",
-    "aspnet-webpack-react": "^2.0.0",
-    "awesome-typescript-loader": "3.1.3",
-    "bootstrap": "3.3.7",
-    "css-loader": "0.28.1",
-    "domain-task": "^3.0.0",
-    "event-source-polyfill": "0.0.9",
-    "extract-text-webpack-plugin": "2.1.0",
-    "file-loader": "0.11.1",
-    "history": "4.6.1",
-    "jquery": "3.2.1",
-    "json-loader": "0.5.4",
-    "node-noop": "1.0.0",
-    "react": "15.5.4",
-    "react-dom": "15.5.4",
-    "react-hot-loader": "3.0.0-beta.7",
-    "react-redux": "5.0.4",
-    "react-router-dom": "4.1.1",
-    "react-router-redux": "5.0.0-alpha.6",
-    "redux": "3.6.0",
-    "redux-thunk": "2.2.0",
-    "style-loader": "0.17.0",
-    "typescript": "2.3.2",
-    "url-loader": "0.5.8",
-    "webpack": "2.5.1",
-    "webpack-hot-middleware": "2.18.0",
-    "webpack-merge": "4.1.0"
+    "body-parser": "~1.17.1",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.3",
+    "express": "~4.15.2",
+    "jade": "~1.11.0",
+    "morgan": "~1.8.1",
+    "serve-favicon": "~2.4.2"
   }
 }
