--- a/webapp/package.json
+++ b/webapp/package.json
@@ -6,8 +6,11 @@
     "@types/jest": "^20.0.4",
     "@types/node": "^8.0.14",
     "@types/react": "^15.0.38",
+    "@types/react-bootstrap": "^0.0.52",
     "@types/react-dom": "^15.5.1",
+    "bootstrap": "3",
     "react": "^15.6.1",
+    "react-bootstrap": "^0.31.1",
     "react-dom": "^15.6.1",
     "react-scripts-ts": "2.4.0"
   },
