--- a/webapp/package.json
+++ b/webapp/package.json
@@ -3,16 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/history": "^4.6.0",
     "@types/jest": "^20.0.4",
     "@types/node": "^8.0.14",
     "@types/react": "^15.0.38",
     "@types/react-bootstrap": "^0.0.52",
     "@types/react-dom": "^15.5.1",
+    "@types/react-router": "^4.0.14",
+    "@types/react-router-redux": "^5.0.3",
+    "@types/redux": "^3.6.0",
+    "@types/redux-actions": "^1.2.8",
     "bootstrap": "3",
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.1",
     "react-dom": "^15.6.1",
-    "react-scripts-ts": "2.4.0"
+    "react-redux": "^5.0.5",
+    "react-router-dom": "^4.1.2",
+    "react-router-redux": "next",
+    "react-scripts-ts": "2.4.0",
+    "redux": "^3.7.2",
+    "redux-actions": "^2.2.1",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {},
   "scripts": {
