--- a/webapp/tsconfig.json
+++ b/webapp/tsconfig.json
@@ -6,16 +6,18 @@
     "lib": ["es6", "dom"],
     "sourceMap": true,
     "allowJs": true,
+    "noStrictGenericChecks": true,
     "jsx": "react",
     "moduleResolution": "node",
     "rootDir": "src",
     "forceConsistentCasingInFileNames": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
-    "noUnusedLocals": true
+    "noUnusedLocals": true,
+    "experimentalDecorators": true
   },
   "exclude": [
     "node_modules",
