Add-header: Adding SASS and simple header component

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@
 /webapp/yarn-debug.log*
 /webapp/yarn-error.log*
 
+# ignore generated CSS files
+/webapp/src/**/*.css
+
 # dependencies
 /node_modules
 
