--- a/webapp/package.json
+++ b/webapp/package.json
@@ -19,6 +19,7 @@
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.1",
     "react-dom": "^15.6.1",
+    "react-materialize": "^1.0.14",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.2",
     "react-router-redux": "next",
