--- a/webapp/package.json
+++ b/webapp/package.json
@@ -28,7 +28,12 @@
     "redux-actions": "^2.2.1",
     "redux-thunk": "^2.2.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "enzyme": "^3.0.0",
+    "enzyme-adapter-react-15": "^1.0.0",
+    "jest-enzyme": "^4.0.0",
+    "react-test-renderer": "^16.0.0"
+  },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
     "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
