--- a/server/BagAPI.Xunit/BagAPI.Xunit.csproj
+++ b/server/BagAPI.Xunit/BagAPI.Xunit.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\WebAPI\BagMyFoodAPI.csproj" />
+    <ProjectReference Include="..\BagAPI\BagMyFoodAPI.csproj" />
   </ItemGroup>
 
 </Project>
